  (index.php link was forced)
- a small bug with file download button (within file P4A_Field) on
  windows server was solved (generated file name is now correct)
- README file was updated with IIS compatibility
- P4A_DB_Navigator::allowMovement(false) is now supported
- P4A_Message default icon was ported to the new icons structure

3.0.0-rc5
- P4A_Table's CSS was beautified a bit
- _disabled icons were removed, opacity: 0.2 filter is added to buttons
  to simulate the disabled effect
- P4A_Message's CSS was changed due to the variation of its usage, 
  now it's not black/bold anymore
- P4A_Table's order/row indicators were replaced with HTML entities
  removing the need for icons
- default fonts in CSS were changed because of the lack of some UTF-8
  characters in IE6
- P4A_Menu' submenu indicator icon was replaced with an HTML entity
  which is applied by a javascript function because the indicator
  has no reason to be in the HTML
- spacer.png image was removed 'cause unused
- loading.gif was moved from icons directory to theme directory
- some new constants were added to customize theme colors
- a bug with PNG uploads under IE was fixed
- separator.png icon was removed
- P4A_Toolbar' separators are now rendered as empty divs instead of
  an image
- P4A_Toolbar' were switched from P4A_Image to P4A_Box
- P4A_Toolbar::setSize() method now checks if buttons have the setSize
  method to propagate it, otherwise tries the setHeight method, otherwise
  throws a warning
- P4A_Message default size was changed to 32
- 48 pixels icons were removed
- a gradient was added to some elements in the default theme
- P4A::messageInfo(), messageWarning() and messageError() methods
  were added wrapping P4A::message() method
- P4A icons now implements the freedesktop icon naming specifications:
  http://standards.freedesktop.org/icon-naming-spec/icon-naming-spec-latest.html
- P4A_Mask's default icon size was changed from 48 to 32